--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,13 @@ app/geoSketch
 */debug/
 test/test
 ui_*
-geoSketch.pro.user
+*.pro.user
 app-build-desktop
+*.aux
+*.log
+*.pdf
+*.backup
+*.tex~
+*.bbl
+*.blg
+
